[project]
name = "neon"
version = "0.1.0"
description = ""
authors = [
    {name = "cesar mena",email = "cmena@nysbc.org"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pyppms (>=3.3.0,<4.0.0)",
    "python-redmine (>=2.5.0,<3.0.0)",
    "ldap3 (>=2.9.1,<3.0.0)",
    "django (>=5.2.7,<6.0.0)",
]

[tool.poetry]
packages = [{include = "neon", from = "src"}]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
mypy = "^1.18.1"
types-ldap3 = "^2.9.13.20250622"
django-stubs = "^5.2.7"

[[tool.mypy.overrides]]
module = "redminelib.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = "pyppms.*"
ignore_missing_imports = "True"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "neon.db.settings"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
